# voice-agent-tools-library

./: .env.example  .gitignore  SERVER_README.md  fix_vapi_integration.md  logging_config.py  main.py  pyproject.toml  server.py  test_cases.md  test_server.py  testing_plan.md
api/: __init__.py  app.py  models.py  routes.py  vapi_webhook.py
calendar_tools/: __init__.py  auth.py  railway_client.py  token_manager.py
config/: vapi_settings.py
db/: __init__.py  connection.py  create_tables.py  init_db.py  schema.py  sql_executor.py
docs/: UPDATED_OUTPUT_FORMATS.md
examples/: demo_calendar_tools.py
inventory/: __init__.py  check_inventory.py  get_expected_delivery_dates.py  get_prices.py  get_similar_vehicles.py  get_vehicle_details.py
kb_tools/: __init__.py  fetch_latest_kb.py  sync_knowledge_base.py
memory/: context.md  context_old.md
middleware/: logging_middleware.py
sample_kb/: about-company.md  current-offers.md  financing-options.md  services-provided.md
scripts/: register_tools.py
supabase/: config.toml  seed.sql
tests/: conftest.py  test_check_inventory.py  test_create_event.py  test_delete_event.py  test_fetch_latest_kb.py  test_get_availability.py  test_get_events.py  test_get_expected_delivery_dates.py  test_get_expected_delivery_dates_backup.py  test_get_expected_delivery_dates_fixed.py  test_get_expected_delivery_dates_updated.py  test_get_prices.py  test_get_similar_vehicles.py  test_get_vehicle_details.py  test_inventory.py  test_inventory_validation.py  test_list_calendars.py  test_sync_knowledge_base.py  test_update_event.py
(+14 files in other folders)
